--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ngx-cookie-service": "^13.0.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
